crates/sui-prover/tests/snapshots/spec_well_formed/spec_well_formed_func_execution.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
snapshot_kind: text
---
exiting with bytecode transformation errors
warning: unused variable
  ┌─ tests/inputs/spec_well_formed/spec_well_formed_func_execution.move:6:16
  │
6 │ public fun foo(a: u8) {
  │                ^ Unused parameter 'a'. Consider removing or prefixing with an underscore: '_a'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning: unnecessary trailing semicolon
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_func_execution.move:13:11
   │
13 │     return;
   │     ------^
   │     │     │
   │     │     Invalid trailing ';'
   │     │     A trailing ';' in an expression block implicitly adds a '()' value after the semicolon. That '()' value will not be reachable
   │     Any code after this expression will not be reached
   │
   = This warning can be suppressed with '#[allow(unused_trailing_semi)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: Underlying func is not calling in all execution ways
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_func_execution.move:11:1
   │  
11 │ ╭ public fun foo_spec(a: u8) {
12 │ │   if (a > 3) {
13 │ │     return;
14 │ │   };
   · │
18 │ │   ensures(true);
19 │ │ }
   │ ╰─^
