crates/sui-prover/tests/snapshots/spec_well_formed/spec_well_formed_params_using.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
snapshot_kind: text
---
exiting with bytecode transformation errors
warning: unused variable
  ┌─ tests/inputs/spec_well_formed/spec_well_formed_params_using.move:6:16
  │
6 │ public fun foo(x: u128) {
  │                ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning: unused variable
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_params_using.move:11:21
   │
11 │ public fun foo_spec(x: u128) {
   │                     ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: Underlying func input var is not a function parameter
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_params_using.move:11:1
   │  
11 │ ╭ public fun foo_spec(x: u128) {
12 │ │   foo(7u128);
13 │ │   ensures(true);
14 │ │ }
   │ ╰─^
